Changes for 1.0.0

 - [NTP-19] added inheritance of tempalte trigger status to all linked hosts (Artem)
 - [NTP-30] added support of UTF8 in email notifications (Sasha)
 - [NTP-29] fixed malfunction of the cpu data collector for Windows agents (Sasha)
 - [NTP-34] returned graph data pickup logic (Artem)
 - [NTP-32] fixed misspelled function inserted in trigger "logserverity" (Artem)
 - [ZBX-824] fixed net.tcp.service to work with host DNS name (Alexei)
 - [ZBX-737] the behaviour of the agent's key "vfs.fs.size" improved to be similar to the "df" command (Dmitry)
 - [NTP-21] size of files larger than 2GB is reported correctly (Dmitry)
 - [NTP-17] fixes in user permissions (Artem)
 - [NTD-91] fixed maintenance period selection by host-group or host (Artem)
 - [NTP-16] added to events page option hosts all from dropdown, when group is selected (Artem)
 - [NTP-14] removed time limit when "No False For B" is selected (Artem)
 - [NTP-13] fixed link in popup in overview page type data (Artem)
 - [NTP-12] fixed styles in menu for IE6 (Artem)
 - [NTP-11] added sorting by alias in users popup (Artem)
 - [NTD-84] added the enhanced trigger editing (Sasha)
 - [NTD-90] message "Got SIGPIPE ..." won't be displayed with default settings in log file (Sasha)
 - [NTP-10] fixed month representation in seconds in most busy triggers report (Artem)
 - [ZBX-812] fixed Windows agent crash when using incorrect third parameter in proc_info metric (Sasha)
 - [ZBX-809] fixed memory leak while processing proc.num metric under Win2008 (Sasha)
 - [NTD-80] changed the minimal maintenance time from 1 hour to 5 minutes (Sasha)
 - [NTD-77] added availability to add several links between map elements (Artem)
 - [NTD-78] changed the number of problems shown in maps at state "No False For B" (Artem)
 - [ZBX-792] fixed server memory leak in processing remote commands in actions (Dmitry)
 - [NTD-89] increased graphs max skip cell and max skip delay values (Artem)